[package]
name = "liboj"
version = "0.2.1"
description = "A high performance framework for building online judge system"
authors = ["hr567 <hr567@hr567.me>"]
readme = "README.md"
license = "MIT"
repository = "https://gitlab.com/hr567/liboj"
edition = "2018"
build = "build.rs"

[dependencies]
lazy_static = "^1.3.0"
nix = "^0.14.1"
serde = { version = "^1.0.92", features = ["derive"] }
serde_json = "^1.0.39"
tempfile = "^3.0.8"
uuid = { version = "^0.7.4", features = ["v4"] }

[dev-dependencies]

[build-dependencies]
bindgen = "^0.49.2"
lazy_static = "^1.3.0"
serde = { version = "^1.0.92", features = ["derive"] }
serde_json = "^1.0.39"

[features]
default = ["gcc", "gxx"]

gcc = []
gxx = []

[badges]
gitlab = { repository = "https://gitlab.com/hr567/liboj", branch = "master" }
