[package]
name = "liboj"
version = "0.3.0-alpha.1"
description = "A high performance framework for building online judge system"
authors = ["hr567 <hr567@hr567.me>"]
readme = "README.md"
license = "MIT"
repository = "https://gitlab.com/hr567/liboj"
edition = "2018"
build = "build.rs"

[dependencies]
bincode = "1.1.4"
lazy_static = "1.3.0"
nix = "0.15.0"
rand = "0.7.0"
serde = { version = "1.0.92", features = ["derive"] }
tempfile = "3.0.8"

[dev-dependencies]

[build-dependencies]
bincode = "1.1.4"
lazy_static = "1.3.0"
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"

bindgen = { version = "0.53.1", optional = true }

[features]
default = ["gcc", "gxx"]

gcc = []
gxx = []
seccomp = ["bindgen"]
cap-ng = ["bindgen"]

[badges]
gitlab = { repository = "https://gitlab.com/hr567/liboj", branch = "master" }
